--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,42 @@ a{
 .label{
     padding: 10px;
 }
+.cart-item{
+    display: flex;
+    padding: 20px;
+justify-content: space-between;
+}
+.row{
+    border:solid 1px;
+    max-height: 200px;
+    min-height: 200px;
+    padding: 10px;
+}
+.cart-img{
+    max-width: 100px;
+    min-width: 100px;
+    max-height: 100px;
+    min-height: 100px;
+    padding-top: 10px;
+}
+.cart-imgg{
+    max-width: 30px;
+    min-width: 30px;
+    max-height: 30px;
+    min-height: 30px;
+    margin: 10px;
+}
+.spinner{
+    position: absolute;
+    top: 45%;
+    left: 45%
+}
+.summary{
+border: 1px solid;
+border-radius: 10px;
+max-width: 30%;
+min-width: 30%;
+max-height: 70%;
+min-height: 70%;
+
+}
