--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,7 @@ a{
 justify-content: space-between;
 }
 .row{
-    border:solid 1px;
+    /* border:solid 1px; */
     max-height: 200px;
     min-height: 200px;
     padding: 10px;
@@ -78,5 +78,13 @@ max-width: 30%;
 min-width: 30%;
 max-height: 70%;
 min-height: 70%;
-
+display: flex;
+flex-direction: column;
+}
+.checkout{
+    width: 100%;
+   border-radius: 20px;
+}
+.col{
+    margin: 15px;
 }
