--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,9 @@ a{
     padding: 20px;
     display: flex;
     flex-direction: column;
-    width: 20%;
+  
+    min-width: 20%;
+    max-width: 20%;
     margin: 10px;
     height: 86vh;
 }
@@ -87,4 +89,12 @@ flex-direction: column;
 }
 .col{
     margin: 15px;
+}
+.landing-page{
+    display: flex;
+    justify-content: center;
+    max-width:100%;
+    min-width: 100%;
+    max-height:80%;
+    min-height:80%;
 }
